[metadata]
name = glass-camb
version = attr: glass.camb.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = GLASS module for CAMB interoperability
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/glass-dev/glass-camb
project_urls =
    Issues = https://github.com/glass-dev/glass-camb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    camb
    glass>=2023.2.dev0
packages = glass

[options.extras_require]
test =
    pytest

[tool:pytest]
addopts = --doctest-modules

[flake8]
ignore = E226,E501,E741
